# sk1llz

./: .gitignore  CONTRIBUTING.md  README.md  skills.json
.github/workflows/: ci.yml  dna-stamp.yml  release.yml  update-manifest.yml
cli/: Cargo.toml  Makefile  README.md
cli/src/: main.rs
domains/api-design/fielding/: SKILL.md
domains/api-design/lane/: SKILL.md
domains/api-design/mendez/: SKILL.md
domains/cli-design/hashimoto/: SKILL.md
domains/databases/helland/: SKILL.md
domains/databases/pavlo/: SKILL.md
domains/databases/stonebraker/: SKILL.md
domains/systems-architecture/: README.md
languages/cpp/: README.md
languages/go/: README.md
languages/javascript/: README.md
languages/python/: README.md
languages/rust/: README.md
languages/zig/: README.md
meta/skill-template/: SKILL.md
meta/validation/: validate.py
organizations/aqr/: SKILL.md
organizations/citadel/: SKILL.md
organizations/cloudflare/: SKILL.md
organizations/de-shaw/: SKILL.md
organizations/google/: README.md
organizations/gremlin/: README.md
organizations/hashicorp/: SKILL.md
organizations/jane-street/: SKILL.md
organizations/jump-trading/: SKILL.md
organizations/netflix/: README.md
organizations/renaissance/: SKILL.md
organizations/two-sigma/: SKILL.md
organizations/uunet/: SKILL.md
organizations/virtu/: SKILL.md
paradigms/distributed/: README.md
paradigms/functional/: README.md
paradigms/systems/: README.md
scripts/: enrich_tags.py  generate_manifest.py
tools/sk1llz-dna/: Cargo.toml
tools/sk1llz-dna/src/: main.rs
(+129 files in other folders)
